# OrigamiAI

./: .gitignore  README.md  main.py  main2.py  pyproject.toml
object/: origami_object.py
physic_engine/: calculate_normals.py  calculate_positions.py  solver.py  solver2.py  solver3.py
ptu/: ptu.py  ptu_board.py  test_boundary.py
utils/: get_faces_from_points_lines.py  get_points_line_from_svg.py  loss.py  normalize_img.py  points_lines_to_svg.py  save_3D_obj.py  snap_to_grid_svg.py  writeText.py
visualization/: animate.py  animate_pointclound.py  show_force.py  show_origami_object.py  tensor_vis.py  visualization.py
